# arrays

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build_wheel.py  library.cpp  library.h  main.cpp  pyproject.toml  vcpkg.json
.github/workflows/: ci.yml  windows-ci.yml
.vcpkg-overlay-ports/maxisoft/mapbox-eternal/: portfile.cmake  vcpkg.json
.vcpkg-overlay-ports/mimalloc-empty/mimalloc/: portfile.cmake  vcpkg.json
.vcpkg-overlay-ports/python3-empty/python3/: vcpkg.json
benchmark/codecs/: okx_ob_simd_codec_benchmark.cpp  orderbook_simd_codec_benchmark.cpp  temporal_1d_simd_codec_benchmark.cpp  temporal_2d_simd_codec_benchmark.cpp
docs/: cpp_lib.md
docs/build_system/: MSVC_CRT_Compatibility.md
docs/llm/bootstrap/: boostrap_gemini_code_assist.md  bootstrap_cline.md  rep.txt  rep1.txt  rep2.txt
docs/llm/doc/cpp/: std_unexpected_23.md
docs/llm/doc/highway-simd/: full.md  short.md
docs/llm/doc/nlohmann-json/: full.md
docs/llm/impl/: feat_mmap.md  part1.md  part2.md  refactor1_api_modernization.md
docs/llm/impl/abi/: plan.md
docs/llm/impl/chunk_offset_zstd/: summary.md  task.md
include/cryptodd/: c_api.h
src/c_api/: base64.cpp  base64.h  c_api.cpp  c_api_utils.cpp  c_api_utils.h  cdd_context.cpp  cdd_context.h  operation_handler.h  store_array_handler.cpp  store_array_handler.h  store_chunk_handler.cpp  store_chunk_handler.h  store_op_handler_base.cpp  store_op_handler_base.h
src/c_api/operations/: flush_handler.cpp  flush_handler.h  inspect_handler.cpp  inspect_handler.h  json_serialization.cpp  json_serialization.h  load_chunks_handler.cpp  load_chunks_handler.h  metadata_handler.cpp  metadata_handler.h  operation_handler.h  operation_types.h  ping_handler.cpp  ping_handler.h  store_array_handler.cpp  store_array_handler.h  store_chunk_handler.cpp  store_chunk_handler.h  store_op_handler_base.cpp  store_op_handler_base.h  store_utils.cpp  store_utils.h
src/codecs/: codec_cache.h  codec_constants.h  float_conversion_simd_codec.cpp  float_conversion_simd_codec.h  i_compressor.h  okx_ob_simd_codec.cpp  okx_ob_simd_codec.h  orderbook_simd_codec.cpp  orderbook_simd_codec.h  temporal_1d_simd_codec.cpp  temporal_1d_simd_codec.h  temporal_2d_simd_codec.cpp  temporal_2d_simd_codec.h  zstd_compressor.cpp  zstd_compressor.h
src/data_io/: buffer.cpp  buffer.h  chunk_offset_codec_allocator.cpp  chunk_offset_codec_allocator.h  chunk_offset_codec_allocator_fwd.h  codec_error.h  data_compressor.cpp  data_compressor.h  data_extractor.cpp  data_extractor.h  data_reader.cpp  data_reader.h  data_writer.cpp  data_writer.h
src/file_format/: blake3_stream_hasher.cpp  blake3_stream_hasher.h  cdd_file_format.cpp  cdd_file_format.h  serialization_helpers.h
src/memory/: aligned.h  allocator.h  mimalloc_override.cpp  object_allocator.h
src/python/: c_api_loader.h  c_api_loader_posix.cpp  c_api_loader_win.cpp  cryptodd_arrays_py.cpp  cryptodd_arrays_pybind11.cpp
src/python/cryptodd_arrays/: __init__.py  abc.py  convenience.py  dataclasses.py  exceptions.py  file.py  lowlevel.py  types.py
src/python/cryptodd_arrays/_internal/: codec_selector.py  json_builder.py  numpy_utils.py
src/python/cryptodd_arrays/stream/: __init__.py  readers.py  writers.py
src/storage/: file_backend.cpp  file_backend.h  i_storage_backend.h  memory_backend.cpp  memory_backend.h  mio_backend.cpp  mio_backend.h  storage_backend.h
test/: cdd_compression_tests.cpp  cdd_file_tests.cpp  lib_simple_tests.cpp  main.cpp  test_helpers.cpp  test_helpers.h
test/c_api/: c_api_orderbook_simd_tests.cpp  c_api_simd_tests.cpp  c_api_temporal_1d_simd_tests.cpp  c_api_temporal_2d_simd_tests.cpp  c_api_tests.cpp
test/codecs/: float_conversion_simd_codec_test.cpp  okx_ob_simd_codec_test.cpp  orderbook_simd_codec_test.cpp  temporal_1d_simd_codec_test.cpp  temporal_2d_simd_codec_test.cpp
test/data_io/: buffer_test.cpp
test/helpers/: orderbook_generator.cpp  orderbook_generator.h
test/memory/: object_allocator_test.cpp
test/storage/: storage_backend_tests.cpp
tests/: conftest.py  test_convenience.py  test_core.py  test_file_io.py  test_stream.py
