[project]
name = "cryptodd-arrays" # Name on PyPI
requires-python = ">=3.11"
dependencies = []
dynamic = ["version", "description"]

[build-system]
requires = ["py-build-cmake~=0.5.0"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "cryptodd_arrays"
directory = "src/python"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "src/", "CMakePresets.json", "CMakeUserPresets.json", "vcpkg.json"]


[tool.py-build-cmake.cmake]
minimum_version = "4.0"
build_type = "RelWithDebInfo"
build_args = ["--target", "cryptodd_arrays_py"]
# note you should set env variable VCPKG_DEFAULT_TRIPLET=x64-windows-static before building
#options = {VCPKG_LIBRARY_LINKAGE="static", VCPKG_TARGET_TRIPLET="x64-windows-static"}
